A few tweaks to how intelliJ starts up so that it uses the correct home directory.